fix alignment on small screens

--- a/src/styles/pages/_blog.scss
+++ b/src/styles/pages/_blog.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: stretch;
   gap: 1rem;
   max-width: var(--max-width);
   margin-inline: auto;
